<resources>
    <string name="app_name">Справочник</string>
    <string name="app_updateAvailable_description">Доступна новая версия приложения</string>
    <string name="app_updateDownloaded_description">Обновление приложения скачано</string>
    <string name="app_downloadUpdate_button">Скачать</string>
    <string name="app_completeUpdate_button">Установить</string>
    <string name="or">или</string>

    <string name="premium_productId">android.test.purchased</string>
    <string name="admob_application_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_publisher_id">pub-3562401600467746</string>
    <string name="admob_interstitialAd_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_nativeAd_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_rewardedAd_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="privacyPolicy_url">https://alexander-kolmachikhin.github.io/projects/epic_to_to_list/privacy_policy.html</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_fontSize_description">Размер текста</string>
    <string name="settings_gdpr_description">Настройки рекламы</string>
    <string name="settings_changeGdpr_button">Изменить настройки</string>
    <string name="settings_backgrounds_description">Фон приложения</string>
    <string name="settings_sendReview_button">Написать отзыв</string>

    <string name="chapters_title">Статьи</string>
    <string name="chapters_noItems_description">Статьи не найдены.</string>
    <string name="chapters_favoriteGroup_title">Избранное</string>
    <string name="chapters_openPlayMarketFailed">Не удалось открыть Play market</string>
    <string name="chapters_premiumOffer_learnMore">Узнать больше</string>
    <string name="chapters_premiumOffer_description">Данная статья доступна только в полной версии.</string>
    <string name="chapters_searchByTags_premiumOffer_description">Поиск по тегам доступен только в полной версии.</string>
    <string name="chapters_unlockByAdOffer_showAd_button">Разблокировать</string>
    <string name="chapters_unlockByAdOffer_description">Чтобы разблокировать статью посмотрите рекламу.</string>
    <string name="chapters_unlockByAdOffer_removeAds_button">Отключить рекламу</string>
    <string name="chapters_searchByGroups">Поиск по группам</string>
    <string name="chapters_searchByTags">Поиск по тегам</string>
    <string name="chapters_searchByName">Поиск по названию</string>
    <string name="chapters_searchByFavorites">Поиск по избранным</string>
    <string name="chapters_searchByName_hint">Введите название статьи</string>
    <string name="chapters_selectTags_button">Выбрать теги</string>
    <string name="chapters_noTagsSelected">Теги не выбраны.</string>
    <string name="chapters_go_to_notes">Личный блакнот</string>

    <string name="tagSelection_title">Теги</string>
    <string name="tagSelection_apply_button">Применить</string>
    <string name="tagSelection_selectAll_button">Выбрать все</string>
    <string name="tagSelection_clearAll_button">Очистить все</string>

    <string name="premiumOfferFragment_title">Полная версия</string>
    <string name="premiumOfferFragment_priceTitle">Одноразовый платеж</string>
    <string name="premiumOfferFragment_buy">Получить полную версию</string>
    <string name="premiumOfferFragment_finished">Полная версия разблокирована!</string>

    <string name="launch_nextButton">Продолжить</string>

    <string name="removeAdsOffer_title">Предложение</string>
    <string name="removeAdsOffer_description">Хотите отключить рекламу?</string>
    <string name="removeAdsOffer_learMore_button">Узнать больше</string>

    <string name="notes_title">Личный блакнот</string>
    <string name="notes_empty">Заметки отсутствуют</string>
    <string name="note_title">Заметка</string>
    <string name="note_saved_message">Заметка сохранена</string>
    <string name="note_title_hint">Заголовок заметки</string>
    <string name="note_content_hint">Текст заметки</string>
    <string name="note_save_button">Сохранить</string>
</resources>