<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/titleIcon_imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="32dp"
                android:src="@drawable/premium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/appTitle_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceOverline"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/titleIcon_imageView" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/premiumOfferFragment_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/appTitle_textView" />

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintTop_toBottomOf="@id/title_textView" />

            <TextView
                android:id="@+id/priceTitle_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/premiumOfferFragment_priceTitle"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/price_textView"
                app:layout_constraintTop_toBottomOf="@id/description_textView"
                app:layout_constraintVertical_bias="1"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="150dp"
                android:alpha="0.8"
                android:gravity="center"
                android:textColor="?attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="75 РУБ"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/premiumOfferFragment_buy"
        android:textSize="14dp"
        android:visibility="gone"
        app:icon="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>